--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <script defer src="index.js"></script>
   </head>
   <body>
     <div class="app">
